plugins {
    id 'java'
//    id 'org.springframework.boot' version '3.4.1'
//    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.springframework.boot' version '3.0.4'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'war'
}

group = 'com.skRookies'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url "https://repo.spring.io/snapshot" }
}

ext {
    set('springAiVersion', "1.0.0-M4")
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    //implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
    //implementation 'javax.servlet:jstl:1.2'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.session:spring-session-core'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'com.mysql:mysql-connector-j'
    implementation 'com.oracle.database.jdbc:ojdbc8:19.8.0.0'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:2.0.0'
    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:2.0.0'

    // Tomcat 버전 호환 맞추기 (10.0.x)
    implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.27'
    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:10.0.27'


//    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//    // JSP 처리용 Tomcat Jasper
//    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
//
//    // Jakarta JSTL API
//    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'
//
//    // Jakarta JSTL 구현
//    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.0'
//
//    /** 시큐어 코딩 때 주석 해제하기 */
//    implementation 'org.springframework.boot:spring-boot-starter-security'
//    implementation 'org.springframework.boot:spring-boot-starter-web'
//    implementation 'org.springframework.session:spring-session-core'
//    compileOnly 'org.projectlombok:lombok'
//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
//    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
//    annotationProcessor 'org.projectlombok:lombok'
//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//    testImplementation 'org.springframework.security:spring-security-test'
//    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
//
//    /** jstl 의존성 */
//    implementation 'javax.servlet:jstl:1.2'
//
//    /** jakarta 의존성 */
//    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
//
//    /** oracle DB Driver 의존성 */
//    implementation 'com.oracle.database.jdbc:ojdbc8:19.8.0.0'
//
//    /** Restful API Valid 어노테이션 사용을 위한 의존성 */
//    implementation 'org.springframework.boot:spring-boot-starter-validation'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
    }
}

tasks.named('test') {
    from('src/main/webapp') {
        into('META-INF/resources') // JSP 파일을 포함
    }
}
